--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,7 @@ mypy = "^1.7.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+line-length = 79
